# ai_agents

1.foundations/: 1.starters.py
1.foundations/me/: summary.txt
2_openai_sdk/: 1.lab_agent.ipynb  2.sales_agent.ipynb  3.sales_agent_better.ipynb  4_deep_research.ipynb
3.crewai/debate_agent/: README.md  pyproject.toml
3.crewai/debate_agent/output/: decide.md  oppose.md  propose.md
3.crewai/debate_agent/src/debate_agent/: crew.py  main.py
3.crewai/debate_agent/src/debate_agent/config/: agents.yaml  tasks.yaml
3.crewai/financial_researcher/: report.md
3.crewai/financial_researcher/src/financial_researcher/: crew.py  main.py
3.crewai/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3.crewai/stock_picker/src/stock_picker/: crew.py
3.crewai/stock_picker/src/stock_picker/config/: agents.yaml
