[project]
name = "debate_agent"
version = "0.1.0"
description = "debate_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
debate_agent = "debate_agent.main:run"
run_crew = "debate_agent.main:run"
train = "debate_agent.main:train"
replay = "debate_agent.main:replay"
test = "debate_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
